Make navbar fixed on mobile

--- a/src/Stylesheets/Responsive.css
+++ b/src/Stylesheets/Responsive.css
@@ -64,4 +64,29 @@
     margin-top: 5px;
     width: 100%;
   }
+
+  .app-nav {
+    top: 0;
+    position: fixed;
+    z-index: 90;
+    width: 100%;
+  }
+
+  .main-container {
+    margin-top: 50px;
+  }
+
+  .queue-window {
+    position: fixed;
+  }
+
+  .app-status {
+    transition: opacity, visibility;
+    transition-duration: 1s;
+  }
+
+  .toggler-active + .app-status {
+    opacity: 0;
+    visibility: hidden;
+  }
 }
